<resources>
    <string name="app_name">Coruja Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="notas_faltas">Notas e Faltas</string>
    <string name="grade">Grade</string>
    <string name="mensagens">Mensagens</string>
    <string name="histórico">Histórico</string>
    <string name="professores">Professores</string>
    <string name="links">Links</string>
    <string name="caixa_entrada">Caixa de entrada</string>
    <string name="caixa_saida">Caixa de saída</string>
    <string name="lblLinks">Links úteis</string>
    <string name="lblHistorico">Histórico</string>
    <string name="lblPeriodo">Periodo</string>
    <string name="lblDisciplina">Disciplina</string>
    <string name="lblMedia">Média</string>
    <string name="lblFaltas">Faltas</string>
    <string name="lblSituacao">Situação</string>
    <string name="lblProfessores">Professores</string>
    <string name="lbl_professor">Professor:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_materias">Matérias:</string>
    <string name="lbl_turno_manha">No Campus pela manhã:</string>
    <string name="lbl_turno_noite">No Campus à noite:</string>
    <string name="lbl_notas_faltas">Notas e Faltas</string>
    <string name="lbl_grade">Grade</string>
    <string name="lbl_gExtra">Grade Extra</string>
    <string name="lbl_mensagens">Mensagens</string>
    <string name="lbl_segunda">Segunda</string>
    <string name="lbl_terca">Terça</string>
    <string name="lbl_quarta">Quarta</string>
    <string name="lbl_quinta">Quinta</string>
    <string name="lbl_sexta">Sexta</string>
    <string name="lbl_sabado">Sábado</string>
    <string name="lbl_horario">Horários</string>
    <string name="lbl_primeiroHoraio">07:10 - 08:00</string>
    <string name="lbl_segundoHoraio">08:00 - 08:50</string>
    <string name="lbl_terceiroHoraio">08:50 - 09:40</string>
    <string name="lbl_quartoHoraio">09:50 - 10:40</string>
    <string name="lbl_quintoHoraio">10:40 - 11:30</string>
    <string name="lbl_sextoHoraio">11:30 - 12:20</string>
    <string name="lbl_setimoHoraio">18:00 - 18:40</string>
    <string name="lbl_oitavoHoraio">18:40 - 19:20</string>
    <string name="lbl_nonoHoraio">19:20 - 20:00</string>
    <string name="lbl_decimoHoraio">20:00 - 20:40</string>
    <string name="lbl_decimoPrimeiroHoraio">20:50 - 21:30</string>
    <string name="lbl_decimoSegundoHoraio">21:30 - 22:10</string>
    <string name="lbl_GradeExtra">Grade do período vigente</string>
    <string name="tituloCxMensagem">Caixa de Mensagens</string>
</resources>
