<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity"
    android:orientation="horizontal">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notas_faltas"
                android:id="@+id/button2"
                android:minHeight="55dp"
                android:onClick="irParaTurmas" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:id="@+id/button3"
                android:minHeight="55dp"
                android:onClick="irParaGrade" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensagens"
                android:id="@+id/button4"
                android:minHeight="55dp"
                android:onClick="irParaMensagens" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/histórico"
                android:id="@+id/button5"
                android:minHeight="55dp"
                android:onClick="irParaHistorico" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professores"
                android:id="@+id/button6"
                android:minHeight="55dp"
                android:maxHeight="55dp"
                android:onClick="irParaProfessores" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/links"
                android:id="@+id/button7"
                android:minHeight="55dp"
                android:onClick="irParaLinks" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
